# cursor

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  readme.md
.github/workflows/: cmake.yml
examples/: simple.c
include/cursor/: cursor.h  packing.h
src/: CMakeLists.txt  bufrw.c  bufrw.h  cursor.c  cursor.h  endian.c  packing.c  packing.h  test.c
tests/: CMakeLists.txt  test.c
